add health check and clean up
