# api/swagger/swagger.yaml
@@ -1,7 +1,6 @@
 swagger: "2.0"
 info:
   description: |+
-    Test
     
   version: "0.0.1"
   title: HomeTrack
@@ -12,8 +11,7 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 
-# during dev, should point to your local machine
-host: dev-hometrack.herokuapp.com:3001
+
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -83,7 +81,23 @@ paths:
             $ref: "#/definitions/ErrorResponse"
 
 
- 
+  /healthcheck:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: healthCheck
+    get:
+      description: Returns the server ip address
+      # used as the method name of the controller
+      operationId: checkHealth
+      #no security
+      security: []
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HealthCheckResponse"
+        # responses may fall through to errors
+        
   /swagger:
     x-swagger-pipe: swagger_raw
     
@@ -91,7 +105,12 @@ paths:
     
 # complex objects have schema definitions
 definitions:
-
+  HealthCheckResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
   ErrorResponse:
     required:
       - error
